--- a/english/word/simple-word/markdown/p3-p5.md
+++ b/english/word/simple-word/markdown/p3-p5.md
@@ -1,9 +1,12 @@
 # P3-P5
 
 - way
-    - 方法，路线
+    - vi/vey- 路
+        - via 经过
+        - previous adj. 以前的
+    - n. 方法，路线
 - how
-    - 多么, +n.: how beautiful she is
+    - 多么, +adj.: how beautiful she is
 - job
     - 前缀影响感情色彩，尾缀影响词性
     - jobless adj. 失业的
@@ -16,11 +19,14 @@
     - childbirth n. 分娩，生孩子
     - childcare n. 儿童保育，儿童照管
 - long
+    - adj. 长的 
     - 渴望: long for return
 - paragraph [ˈpærəɡræf]
-    - paraphrase [ˈpærəfreɪz]
+    - n. 段落
+    - paraphrase [ˈpærəfreɪz]  n. 注释，释义； v. 解释
 - give
 - even
+    - adv. 甚至； adj. 均匀的
     - adj.: Talking in an even tone helps the other person cool down.
     - even if == even though 即使
         - It also makes you seem confident, even if you aren't.
@@ -38,6 +44,7 @@
 - much
     - adv.: to become much more self-sufficient([səˈfɪʃnt] adj. 足够的; 充足的)
 - sheet
+    - answer sheet
 - each
     - pron.: each has an apple
     - adj.: Each student has an apple.
@@ -51,17 +58,20 @@
 - because
     - conj.: I did it because he told me too.
     - cause
-        - n.
+        - n. 原因，理由； vt. 导致；使遭受
         - vt.: Do they know what caused the fire?
 - life
     - lifestyle n. 生活方式，工作方式
     - lifetime n. 一生，终身
 - lift
-    - n. 电梯(英式) vs elevator
+    - lev- 举，轻
+    - vt. 举起
+    - n. 电梯(英式) vs elevator（美式）
     - He is strong enough to lift a car.
 - also
 - first
 - well
+    - n. 井，水井； adv. 很好的，完全的； adj. 健康的
     - n.: Why did the man fall down the well?
     - adv.: Because he could not see that well.
 - high
@@ -75,10 +85,11 @@
 - me
 - help
 - just
-    - adj.
-    - adv.
-    - justice, justify
+    - adj. 公正的； adv.正好；仅仅；刚才
+    - justice n. 公平，正义 
+    - justify v. 证明...正义；为...辩护
 - over
+    - prep. 在...上方；在...期间（during）
     - prep.: the dog over the bed, over the past decade
 - she
 - study
@@ -88,8 +99,10 @@
 - woman
     - 复数: women
 - passage
-    - n. 一段
+    - n. **（文章等的）一段**；乐段；通过
     - pass
+        - vt. **经过**；传递；**通过**，度过
+        - 词根：通过，经过
         - vt. 通过: She gave me a nod as she passed the street.
         - vt. 经过: California recently passed a law.
     - bypass n. 旁路. v. 绕过，避开
@@ -103,6 +116,7 @@
 - learn
     - ~~learn knowledge~~. Learn is important.
 - great
+    - adj. 擅长的；极好的；大量的
     - adj. 大量的: a great number of
     - greatly adv. 非常，很，大大地: Social class greatly helps enrich educational experiences.
     - greatness n. 伟大
@@ -115,12 +129,14 @@
 - between
 - problem
 - see
+    - 看（强调看到的结果）
     - see...as 把...视为: I see you as my best friend.
 - look
+    - 看（强调看的动作）
     - 容貌: popularity of certain looks, brands, or neighborhoods.
 - any
     - det. 任何的: any people, any apples, any a book
-    - adv.: She didn't do any learning thing today.
+    - adv. 用于否定句或疑问句当中表示一点也不: She didn't do any learning thing today.
 - seem
     - link v. 似乎，好像 +adj.: it seems silly to stay back a year.
     - vi. +to do: The similar genes seem to be evolving faster than other genes.
@@ -129,12 +145,13 @@
     - 用在 adj. 和 adv. 前“太，非常”: If you start thinking about it too much.
     - too...to 太...不能: A job's starting salary seems too small to satisfy an emerging adult.
 - last
-    - 与过去时连用，adj. 最近的 adv. 上一次: Its lawmakers gave preliminary approval last week to a law.
+    - adj. 最近的；最后的； adv. 上一次；最后； v. 持续
+    - 与过去时连用，adj. 最近的 adv. 上一次: Its lawmakers gave <u>preliminary</u>（初步的） approval last week to a law.
     - What does the author argue in the last paragraph?
     - v.: Formerly it lasted three days...
 - before
     - conj. 在...以前（+内容）: Before you share your thoughts...
-    - adv. 以前(什么也不加）: This advice is more relevant now than ever before.
+    - adv. 以前（什么也不加）: This advice is more relevant now than ever before.
 - still
     - adv. 仍旧: because writing was, and still is, one of my favourite activities.
     - adj. 静止的: Reddest cites the "still face experiment".
@@ -156,6 +173,7 @@
 - after
     - 用法如 before
 - education
+    - duc- 引导，引出
 - right
     - in the right direction
     - adv.: We are right now simply experiencing the painful side.
@@ -163,17 +181,17 @@
 - must
 - author
 - very
-    - adj.: This is the very book.
+    - adj. 正是的: This is the very book.
 - could
 - few
-    - 几乎没有(单独使用): Few of us use our innovative(innovative) modes of thought.
+    - 几乎没有(单独使用): Few of us use our innovative(创新性) modes of thought.
     - 很少(与a连用): A few wealthy people will own all the capital.
     - little
         - a little
     - few + 可数名词, little + 不可数名词
 - might
 - example
-    - n. 例子: Jealousy**, for example,** may have evolved to alert us to important inequalities.
+    - n. 例子: Jealousy, **for example,** may have evolved to alert us to important inequalities.
     - n.: Set a Good Example for Your Kids.
 - those
 - today
@@ -182,20 +200,26 @@
 - while
     - conj. 尽管(位于句首): While their parents were content to work long hours young people value flexibility.
     - conj. 当...的时候(+doing): saving them money while helping eh environment.
-    - conj. 然而(位于句中): They can smell one type of flower but not another, while others are sensitive to the smells
+    - conj. 然而(位于句中): They can smell one type of flower but not another, while others are <u>sensitive</u>（敏感的） to the smells
       of both flowers.
 - age
     - 时代: digital age, age of AI
 - want
+    - van- 空
+        - vanish v. 消失
+        - vanity n. 虚荣心
     - vt.: You might want to gather your army first.
 - idea
-    - ideal adj. 理想: Mauna Kea is deemed as an ideal astronomical([ˌæstrəˈnɑːmɪkl] adj. 天文学的; 极其巨大的) side.
+    - ideal adj. 理想的: Mauna Kea is deemed as an ideal astronomical([ˌæstrəˈnɑːmɪkl] adj. 天文学的; 极其巨大的) side.
     - idealized adj. 理想的: They portray an idealized version of themselves.
 - family
     - Father And Mother I Love You.
 - university
+    - uni- 一个
+    - vers- 转
     - collage n. 大学(学院)
 - kind
+    - adj. 和蔼的，仁慈的； n. 种类
     - kindness n. 仁慈，友好的行为
 - yet
     - adv. 仍然: Virtual reality haven't been invented yet.
@@ -214,40 +238,45 @@
     - costly adj. 昂贵的，代价高的: It can be costly to make up credits.
 - however
     - adv. 无论如何 +adj./adv.: Each set of circumstances, however bad, offers a unique opportunity for growth.
-    - adv. 然而(修饰整个句子):
+    - adv. **然而(修饰整个句子):**
         - However, the numbers are still small.
         - The numbers, however, are still small.
         - The numbers are still small, however.
 - without
     - prep.: It's almost impossible to go through life without experiencing some kind of failure.
 - interest
-    - n. 兴趣
+    - n. 兴趣；吸引力
         - 某种心情不可数: He looked around with interest.
         - 感兴趣的领域、方面 可数: Prior knowledge and interests influence what we experience.
-    - n. 利益: The French Senate has passed a bill to protect French companies' interests.
+    - n. 利益（复数）: The French Senate has passed a bill to protect French companies' interests.
     - interest groups 利益集团
     - interest rate 利率
 - both
-    - neither
+    - 两者都
+    - neither  两者都不
 - century
+    - cent- 百
+    - n. 世纪，百年
 - English
-- home n. 家，家乡
+- home 
+    - n. 家，家乡
 - line
     - n. 界限: whether there is still a line between the court and politics.
 - rather
     - adv. 相当: Their work makes a rather startling assertion.
     - adv. 宁可: Kids would rather play (then study).
         - would rather A (than B): 宁愿A（也不愿B）
-    - rather than: Good memory results from intuitive rather than exercises.
+    - rather than: Good memory results from <u>intuitive</u>（天生的） rather than exercises.
         - **A rather than B: 是A而不是B**
 - same
 - less
     - little 比较级
 - worker
 - grow
+    - vi. 生长 ；变得，发展； vt. 种植
     - link v. 变得
     - grew, grown
-    - growth n. 成长，增长
+    - **growth** n. 成长，增长
     - grower [ˈgroʊə(r)] n. 栽培者
     - grown-up adj. 成年的 n. 成年人
 
@@ -262,19 +291,22 @@
     - pron.: Romance is one thing, marriage is quite another.
     - adj.: Such active research can have another effect.
 - against
+    - prep. 逆着；反对
     - Fly against the wind again and again.
 - start
-    - start - stop
-    - begin - end
+    - start（动作） - stop
+    - begin （时间）- end
+    - Would you mend my car？I can not begin/start it.
 - number
     - No.
-    - 可数名词数量
+    - （可数名词）数量
     - 不可数名词数量 - amount
 - **since**
     - conj. 自...以来(+时间点): I've been able to do this, since I was four.
     - conj. 因为，既然: Since students and parents expect a college...
     - perp. 自...以来: since 2015
     - adv. 自那以后: ...some of these languages have since vanished.
+    - 出现在完形填空中一般不是正确选项
 - her
 - word
     - in a word 总之
