--- a/english/word/simple-word/markdown/p18-p20.md
+++ b/english/word/simple-word/markdown/p18-p20.md
@@ -1,6 +1,6 @@
 # p18-p20
 
-- ocean
+- ocean [ˈoʊʃn]
     - n. 海洋；(pl.)大量，许多(oceans of)
     - sea vs ocean
         - sea 接近陆地
@@ -158,13 +158,14 @@
     - adj. 繁忙的；热闹的
 - error
     - n. 错误，差错
-    - The top reason for the fake news phenomenon(现象) is "reade error". 假新闻现象的最主要原因是‘读者错误’
+    - The top reason for the fake news phenomenon([fəˈnɑːmɪnən] 现象) is "reade error". 假新闻现象的最主要原因是‘读者错误’
     - erroneous adj. 错误的 [ɪˈroʊniəs]
         - ...reveal(揭示) its erroneous nature(本质).
 - familiar [fəˈmɪliər]
     - adj. 熟悉的；随便的，放肆的
     - unfamiliar 不熟悉的
     - New skills and unfamiliar business models are needed too. 还需要新的技能和不熟悉的商业模式
+    - similar [ˈsɪmələr] adj. 类似的
 - final
     - adj. 最后的；决定性的
     - fin- 结束；范围
@@ -241,8 +242,7 @@
 - tie
     - vt. **栓，扎**；使有联系； n. 联系；**平局** vi. **不分胜负**
     - be tied to 与...相关
-        - "<u>A substantial(重大的，大量的) part(很大一部分)</u>" of executive(管理人员) pay is now tied to performance(
-          表现 -> 业绩).
+        - "<u>A substantial([səbˈstænʃl] 重大的，大量的) part(很大一部分)</u>" of executive(管理人员) pay is now tied to performance(表现 -> 业绩).
 - verbal
     - adj. **口头的；用文字的**；动词的(verb)
 - voice
@@ -257,6 +257,7 @@
 - apparently
     - adv. 显然地
     - He paused, apparently lost in thought. 他停顿了一下，显然陷入了沉思
+    - apparent [əˈpærənt] adj. 明显的
 - born
     - adj. 天生的（往往用于被动语态、过去时）
 - buyer
@@ -370,7 +371,7 @@
     - adj. 昂贵的
     - expense n. 费用
     - pens- 花费
-- famous
+- famous [ˈfeɪməs]
     - adj. 著名的，出名的
     - fame n. 名声；声誉
         - Their pursuits([pərˈsuːt] 追求) are not fame or wealth.
@@ -422,7 +423,7 @@
 - soccer [ˈsɑːkər]
     - n. 足球 
     - association football 足球
-- southern
+- southern [ˈsʌðərn]
     - adj. 南方的；南部的
 - surface
     - n. 表面；外观
