--- a/english/word/simple-word/markdown/p39-p41.md
+++ b/english/word/simple-word/markdown/p39-p41.md
@@ -18,8 +18,9 @@
     - adj. 无意义的；无目标的；不值得做的
 - junior
     - adj. 年少的；资历较浅的； n. 年少者；大三学生
+    - senior
 - rain
-- pregnant
+- pregnant [ˈpreɡnənt]
     - adj. 怀孕的；妊娠的
 - logo
 - exit
@@ -29,18 +30,24 @@
         - ambition 雄心，野心
 - amazed
     - adj. 惊奇的，惊讶的
-    - amazing
     - amaze vt. 大为惊奇，使惊愕
-- penny  [ˈpeni]
+    - amazing adj. 惊奇的
+    - amazing vs amazed
+        - amazing 修饰物
+        - amazed 修饰人
+- penny [ˈpeni]
     - n. 便士，分
     - pound 磅
-- sacred
+- sacred [ˈseɪkrɪd]
     - adj. 害怕的；恐惧的；畏惧的；担心的
-- frown  [fraʊn]
+    - happy
+    - angry
+    - sad
+- frown [fraʊn]
     - vi./n. 皱眉
     - ...those whose mouths were contracted in a frown
 - overdress
-- partially 
+- partially [ˈpɑːrʃəli]
     - adv. 部分地；不完全地；偏爱地
     - partial 阅读题作者态度题是必错选项
 - carrier
@@ -53,44 +60,47 @@
     - n. 伟大，崇高
 - wire
     - n. 电线；电报；
-    -hard-wired adj. **本能的，天生的**；硬链接的
-        - We can reduce or even <u>eliminate</u>（清除） the negative effects of our quick，hard-wired responses.
+        - hard-wired adj. **本能的，天生的**；硬链接的
+            - We can reduce or even <u>eliminate(清除)</u> the negative effects of our quick，hard-wired responses.
+- slot [slɑːt]
+    - n. 窄缝，扁口; （时间表、计划中的）时段，位置 v. 投放; 插入
 - rocket
-    - n. 火箭； vi. **迅速上升，猛涨**
+    - vi. **迅速上升，猛涨**；n. 火箭
     - Costs have rocketed and ticket prices have stayed low.
 - comedy
     - n. 喜剧；滑稽，诙谐
-    - ...under the <u>incentive</u>（驱动） of classical tragedy and comedy.
+    - ...under the <u>incentive(驱动)</u> of classical tragedy(悲剧) and comedy.
 - golf
     - n. 高尔夫球运动
-- harbor/harbour
-    - bur- 保；藏
+- harbor/harbour [ˈhɑrbər]
     - n. 港口，避风港； vt. 庇护；心怀怨恨等
+    - bur- 保；藏
     - ...health professionals have been shown to harbor biases against the obese.
 - helpless
-- marine
+    - adj. 无自理能力的，不能自立的，无助的
+- marine [məˈriːn]
     - adj. **海洋的**；海军的
-- gambler  [ˈɡæmblər]
+- gambler [ˈɡæmblər]
     - n. 赌徒
     - gamble v./n. 赌博，打赌
         - He had never gambled...
 - specially
     - adv. 特别地
     - special adj. 特别的，具体的
-- pile
+- pile [paɪl]
     - n. 一堆，一叠； vt. 堆积，堆放； vi. 蜂拥，涌入
     - a pile of 一些，一些列
         - Each participant was shown a pile of pens.
     - 涌入
         - ...more students to pile into law schools.
 - polish
-    - n. 鞋油； vt. **擦亮；润饰**
+    - vt. **擦亮；润饰**；n. 鞋油
     - a shoe-polish factory
-    - Can you polish the top of tabel？
+    - Can you polish the top of table?
 - battery
     - n. 电池组；一系列，一套
-    - The application of clean energy has boosted battery storage
-    - a battery  of  一系列
+    - The application of clean energy has boosted(提升) battery storage
+    - a battery of 一系列
         - In one study，participants completed a battery of eight tasks.
 - dog
 - awful
@@ -103,24 +113,24 @@
 - milk
 - drag
     - vt. 拖，拉； n. 拖拽；累赘
-    - Wasted time is a drag on Americans' economic...
+    - Wasted time is a drag on Americans' economic(经济的)...
 - unit
     - n. 单元；部件
 - Saturday
 - chop
     - v. 劈，砍，斩
-- bored
+- bored [bɔːrd]
     - adj. 厌烦的，厌倦的
 - wipe
     - v./n. 擦，抹； n. 湿巾
     - v. 擦
-        - Customers eat snacks or wipe counters almost without thinking.
+        - Customers eat snacks(小吃) or wipe counters almost without thinking.
     - disinfecting wipes 消毒湿巾
 - adjective
     - n. 形容词
 - chamber  [ˈtʃeɪmbə(r)]
     - n. 会议室；房间
-    - Two monkeys were placed In separate but adjoining chambers.
+    - Two monkeys were placed in separate(分离) but adjoining(毗邻) chambers.
 - ink
     - n. 墨水，油墨
 - guy
@@ -137,21 +147,21 @@
     - 我在床上lazy（懒惰的），感觉十分cozy（舒适的），妈妈气的crazy（疯狂的）
 - whereby
     - adv. 借此，凭此；由于
-    - 修饰plan，policy，approach，method等（方式方法）
+    - 修饰 plan, policy, approach([əˈproʊtʃ] 方法), method 等（方式方法）
     - whereby 后面接句子
-        - Teaching has traditionally been the method whereby many intellectuals earn their living.
-- crown
+        - Teaching has traditionally(传统上) been the method whereby many intellectuals earn their living.
+- crown [kraʊn]
     - n. 王冠
-- straw
-    - n. 稻草，麦秆；**吸管**
+- straw [strɔː]
+    - n. **吸管**；稻草，麦秆
 - sadly
     - adv. 令人遗憾，不幸地
-- monster
+- monster [ˈmɑːnstər]
     - n. 怪物；残忍的人
 - subway
 - unanswered
     - adj. 未回答的；未解答的
-- silly
+- silly [ˈsɪli]
     - adj. 傻的，糊涂的
 - bridge
     - n. 桥梁；桥；桥牌； vt. 架桥于，弥合
@@ -163,31 +173,35 @@
 - shirt
 - blog
 - football
-- geographic
+    - soccer
+- geographic [ˌdʒiə'ɡræfɪk]
     - adj. 地理学的；地理的
-    - geography n. 地理学；地理
+    - geography [dʒiˈɑːɡrəfi] n. 地理学；地理
 - thinker
-- soap  [səʊp]
+- soap [səʊp]
     - n. 肥皂
-    - soup  [suːp] n. 汤
+    - soup [suːp] n. 汤
 - prose
     - n. 散文
 - ant
     - n. 蚂蚁
 - unimportant
-- dental
+- dental [ˈdentl]
     - adj. 牙齿的，牙科的
-    - dentist n. 牙科医生
+    - dentist [ˈdentɪst] n. 牙科医生
     - dentistry n. 牙科学
-- mill
+        - -ry 表示产业
+            - industry
+- mill [mɪl]
     - n. 磨坊
 - violent
     - adj. 暴力的，猛烈的
 - housework
 - sing
-- soak
+- soak [soʊk]
     - v. 浸泡
     - ...socked in holy water.
+    - suck
 - meantime
     - adv. 其间，其时
 - uneasy
@@ -195,7 +209,7 @@
 - February
 - bet
     - vt. 以...打赌；vi. 打赌
-    - He still likes to bet （on）the horses.
+    - He still likes to bet (on) the horses.
     - bet-bet-bet-betting
     - bet-betted-betted-betting
 - ninety
@@ -206,60 +220,62 @@
     - n. 菜单
 - spin
     - vi. **旋转**；眩晕
-    - Sit down to read and the <u>flywheel</u>（飞轮） of work-related thoughts keeps spinning.
+    - Sit down to read and the <u>flywheel(飞轮)</u> of work-related thoughts keeps spinning.
 - mate
     - n. 伙伴，配偶
 - toll
-    - v. 敲钟； n. **通行费**；伤亡人数；**损失**
+    - n. **通行费**；**损失**；伤亡人数；v. 敲钟
     - Every entrance ticket lists a toll-free number.
     - 损失 take a toll on 对...造成损失
-        - Many everyday tasks take a surprising toll on the environment. 
-- foam
+        - Many everyday tasks <u>take</u> a surprising <u>toll on</u> the environment.
+- foam [foʊm]
     - n. 泡沫
 - classmate
-- excllence
+- excellence
     - n. 优秀；杰出
 - killer
 - wonderful
 - await
     - vt. 等待，等候
         - They are awaiting the birth of their first child.
-    - wait vi. 
+    - wait vi.
         - I will be right here waiting for you.
-- geometry
+- geometry [dʒiˈɑːmətri]
     - n. 几何；几何图形
-    - geography
-- owing to
+    - geography [dʒiˈɑːɡrəfi] n. 地理（学）
+- **owing to** [ˈoʊɪŋ]
     - prep. 由于，因为
         - Monarchs are kept as heads of state in Europe mostly owing to their undoubted and respectable status.
-        在欧洲君主被视为国家首脑最主要是因为他们不受争议的受人尊敬的地位。
-    - owe v. 欠；**归因于**
-        - Most didn't realize they owed It and few paid.
-        - High achievers owe their success mostly to <u>nurture</u>（培养）.
-- toxic
+          在欧洲君主被视为国家首脑最主要是因为他们不受争议的受人尊敬的地位。
+    - owe v. **归因于**；欠
+        - Most didn't realize they owed it and few paid.
+        - High achievers owe their success mostly to <u>nurture(培养)</u>.
+- toxic [ˈtɑːksɪk]
     - adj. 有毒的
-- harvest
+- harvest [ˈhɑːrvɪst]
     - n. 收获，收成
     - ...individuals can use the money to supplement their harvests.
-- buzz
+- buzz [bʌz]
     - vi. 发出嗡嗡声；忙乱
     - buzzword 流行话；时髦用语
-- crisp
+- crisp [krɪsp]
     - adj. 脆的，鲜脆的；干净利落的
     - The food is crisp
-- tennis
+- tennis [ˈtenɪs]
     - n. 网球
-- boil
+- boil [bɔɪl]
     - vi. 沸腾；激动； vt. 煮沸
     - a piece of boiled beef
-- pilot
+    - bubble
+- pilot [ˈpaɪlət]
     - n. **飞行员，引航员**； vt. 驾驶，引航；adj. 试点的
 - cancel
     - vt. 取消，废除
         - Suppose you have to cancel your travel plan and will not be able to visit professor Smith.
-    - abolish vt. 废除，废止（法律、制度、习俗等）
-        - He had promised in return to abolish slavery.
+    - abolish [əˈbɑːlɪʃ] vt. 废除，废止（法律、制度、习俗等）
+        - He had promised in return to abolish slavery([ˈsleɪvəri] n. 奴隶制度).
 - someday
+    - adv. 有一天，有朝一日
 - Christmas
 - lake
     - n. 湖
@@ -271,26 +287,27 @@
 - bush
     - n. 灌木，灌木丛
     - beat around the bush 拐弯抹角
-- flee
+- flee [fliː]
     - vi. 逃走，逃掉； vt. 逃离
     - She burst into tears and fled.
 - instantly
+    - adv. 立刻，立即，马上
 - dark
-- shed
-    - n. 棚屋； vt. 脱去；流出；散发；摆脱
+- shed [ʃed]
+    - n. 棚屋；vt. 脱去；流出；散发；摆脱
     - 棚屋
-        - Big arch shed was better than the little.
+        - Big arch([ɑːrtʃ] n. 拱（门）) shed was better than the little.
     - 脱去；流出；散发；摆脱
         - US factories shed workers so fast.
     - shed light on 阐明；点亮；启发 = enlighten
-        - A recent annual study sheds some light on that question.
-- beneath  [bɪˈniːθ]
+        - A recent annual study <u>sheds</u> some <u>light on</u> that question.
+- beneath [bɪˈniːθ]
     - prep. 在...下面
-    - <u>It is</u> the masses beneath them <u>that</u>（正是） are left behind.
+    - <u>It is</u> the masses beneath them <u>that(正是)</u> are left behind.
     - under/below 在...下面
 - fetch
     - vt. 拿来，请来，叫来
-    - The inhabitants have to walk a mile to fetch water.
+    - The inhabitants([ɪnˈhæbɪtənt] n. 居民，住户) have to walk a mile to fetch water.
     - take 拿走
         - And someone gives them food and takes their money.
 - nice
