feat: add writes 013

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -157,4 +157,12 @@ Dear Paul,<br>
 <p align="right">Yours,</p>
 <p align="right">Li Ming</p>
 
+## 013
 
+Dear friends,<br>
+&emsp;&emsp;&emsp;&emsp;I am writing the email to recommend one of the most prestigious Chinese celebrities to you, Confucius.<br>
+&emsp;&emsp;&emsp;&emsp;First of all, being a great thinker, educator and founder of Confucianism, Confucius is an ancient sage during the Spring and Autumn Period. In addition, his words and life story were recorded by his disciples and their student in *The Analects*. As an enduring classic of ancient Chinese culture, *The Analects* has influenced all thinkers, writers and politicians in the over-2000-year-long history of China after Confucius. Finally, much of Confucian thought still remains the interest of not only the Chinese people but also people in other parts of the world.<br>
+&emsp;&emsp;&emsp;&emsp;If you have any questions about Confucius, please feel free to contact me.<br>
+
+<p align="right">Yours sincerely,</p>
+<p align="right">Li Ming</p>
