feat: add lineay-system of math

--- a/english/word/simple-word/markdown/p36-p38.md
+++ b/english/word/simple-word/markdown/p36-p38.md
@@ -3,7 +3,7 @@
 - fare
     - n. （交通的）费用，票价
     - pad- 脚，足
-    - ...another increase to rail passenger fares
+    - ...another increase to rail([reɪl]) passenger fares
     - 区别：fee 支付的专业的费用，可数
         - Higher tuition fees for undergraduate studies.
 - settler
@@ -53,7 +53,8 @@
     - n. 彩票；碰运气的事
 - vessel [ˈvesl]
     - n. **穿，舰；血管**；容器
-    - Today's vessel can find their prey([preɪ]) using satellites([ˈsætəlaɪt] n. 卫星; 人造卫星;) and sonar([ˈsoʊnɑːr] n. 声呐装置).
+    - Today's vessel can find their prey([preɪ]) using satellites([ˈsætəlaɪt] n. 卫星; 人造卫星;) and sonar([ˈsoʊnɑːr]
+      n. 声呐装置).
     - blood vessel
 - backyard
     - n. 后院
@@ -94,11 +95,12 @@
     - adj. 肮脏的，下流的，卑鄙的
     - dirt
 - dance
-- inch
+- inch [ɪntʃ]
     - n. 英寸
     - foot 英尺
 - somebody
-- medieval
+    - pron. 某人，有人 n. 大人物，重要的人物
+- medieval [ˌmediˈiːvl]
     - adj. 中世纪的
 - readership
     - n. 全体读者
@@ -111,9 +113,9 @@
 - grateful
     - adj. 感激的，感谢的
     - grat- 感激，高兴
-        - gratitude n. 感激，感谢
+        - gratitude [ˈɡrætɪtuːd] n. 感激，感谢
     - be grateful to sb. for sth. 因某事而感激某人
-        - We <u>are</u>  particularly <u>grateful to him for</u> his timely help.
+        - We <u>are</u> particularly <u>grateful to him for</u> his timely help.
 - dot
     - n. 点； vt. 点缀，打点与
 - pave [peɪv]
@@ -126,7 +128,7 @@
     - vt. **愚弄** n. 笨蛋
     - foolish adj. 愚蠢的；荒谬的
 - nationally [ˈnæʃənlɪ]
-    - adv. 全国性地；与某国相关 地
+    - adv. 全国性地；与某国相关地
     - nation [ˈneɪʃn] n. 国家
     - national adj. 国家的
     - nature 自然，本质
@@ -139,7 +141,7 @@
     - 教训
         - We can choose to <u>look for(吸取)</u> the lesson we<u>'re meant to</u> learn.
             - be meant to 要去，应该
-- dietary
+- dietary [ˈdaɪɪˌtɛri]
     - adj. 与饮食有关的；饮食的
     - diet
 - eighty
@@ -165,7 +167,7 @@
     - n. 门诊部，诊所
     - clin- 倾斜
         - decline 下降
-        - incline
+        - incline vt.& vi. （使）倾斜，弄斜
 - forum [ˈfɔːrəm]
     - n. 论坛，讨论会
     - National Immigration Forum.
@@ -173,10 +175,11 @@
 - annually [ˈænjʊəlɪ]
     - adv. 一年一次地
     - ann- 年
-    - annual
+    - annual [ˈænjuəl]
 - countryside
     - n. 农村
-- soup
+- soup [suːp]
+    - n. 汤，羹
 - unattractive [ˌʌnəˈtræktɪv]
     - adj. 不悦目的，不漂亮的
     - attract [əˈtrækt] v. **吸引**，使...喜爱
@@ -230,7 +233,7 @@
         - troops 表示个体
     - group
 - textile [ˈtekstaɪl]
-    - n.纺织品；纺织业（pl.）
+    - n. 纺织品；纺织业（pl.）
 - nearby
     - adj. 附近的； adv. 在附近
     - nearly adv. 几乎; 差不多
@@ -253,7 +256,7 @@
     - n. 双胞胎； adj. 孪生的
 - elder [ˈeldər]
     - adj. 年龄大的，年长的； n.（pl. ）长者，长辈
-    - older
+    - older adj. 年长的; 古老的
 - kick [kɪk]
     - vt. 踢； n. 踢，极大的乐趣
     - kick out 踢出去
@@ -277,7 +280,7 @@
     - n. 友善；友好；善意
 - panic
     - n. 恐慌，惊慌； v. 使恐慌
-- roast
+- roast [roʊst]
     - v. 烤； n. 烤肉； adj. 烤过的
     - It is not telling people to cut out roast foods entirely.
     - toast 吐司
@@ -288,7 +291,7 @@
     - There is too much damn happiness in the world today.
 - erase [ɪˈreɪs]
     - vt. 擦除，抹除
-    - ...to ensure that phone data are not erased or altered(改变)...
+    - ...to ensure that phone data are not erased or altered([ˈɔːltər] 改变)...
     - eraser [ɪˈreɪsər] n. 橡皮
 - purely [ˈpjʊrli]
     - adv. 完全地，十足地; 纯粹地;
@@ -296,12 +299,13 @@
     - adj. 有乐趣的; 令人愉快的
 - slim [slɪm]
     - adj. 苗条的；纤细的
+    - slip
 - cabin [ˈkæbɪn]
     - n. 机舱，船舱；小木屋
     - cab n. 出租车; 驾驶室/座
 - radar [ˈreɪdɑːr]
     - n. 雷达
-    - They located the ship by radar.
+    - They located([ˈloʊkeɪt]) the ship by radar.
 - entrance
     - n. 入口；进入
     - postgraduate entrance exam 研究生入学考试
