--- a/english/word/simple-word/markdown/p21-p23.md
+++ b/english/word/simple-word/markdown/p21-p23.md
@@ -41,23 +41,25 @@
               /descend(下降, desc)/decline(下降)/plunge(暴跌)</u>.
     - management n. 经营，管理
 - aid [eɪd]
-    - n./vt. 帮助（官方） 
+    - n./vt. 帮助（官方）
     - Bolivar had received aid from Haiti(海地)...
     - aide n. 助手 [eɪd]
     - aim [eɪm] n. 目标
 - attack [əˈtæk]
-    - v./n. 袭击；抨击； n. (疾病)突然发作 
+    - v./n. 袭击；抨击； n. (疾病)突然发作
     - 袭击；抨击
         - Labour(劳动党) is under attack for opposing(反对) development.
     - heart attack 心脏病发作
+    - attract v. 吸引
 - banker
 - barber [ˈbɑːrbər]
-    - n. 理发师（男） 
+    - n. 理发师（男）
     - hairdresser 理发师（女）
 - brand
     - n. 烙印，**商标** ；vt. 打烙印于；加商标于
     - 加标签于
-        - We hail(夸耀) them as Americans, or brand them as aliens(外星人, 对应 Americans，即外国人). 我们要么把他们称颂为美国人，要么把他们贴上“外来者”的标签
+        - We hail(夸耀) them as Americans, or brand them as aliens(外星人, 对应 Americans，即外国人).
+          我们要么把他们称颂为美国人，要么把他们贴上“外来者”的标签
     - brandy n. 白兰地
 - bus
 - cash
@@ -67,7 +69,7 @@
         - It takes several days before a check is cashed.
             - check n. 支票； v. 检查
 - circuit [ˈsɜːrkɪt]
-    - n. 电路，线路；巡回路线；环行 
+    - n. 电路，线路；巡回路线；环行
     - circu- 圈，环
     - A break in the circuit caused the lights to go out.
     - circuit judge 巡回法官
@@ -105,7 +107,8 @@
     - adv. 不同地；相异地
 - drama
     - n. 戏剧；剧本；戏剧性事件
-    - ...the drama was a form(形式) of literature([ˈlɪtrətʃər] 文学) which gave glory([ˈɡlɔːri] 荣耀) to Greece(希腊) and Roma(罗马)...
+    - ...the drama was a form(形式) of literature([ˈlɪtrətʃər] 文学) which gave glory([ˈɡlɔːri] 荣耀) to Greece(希腊)
+      and Roma(罗马)...
       这种戏剧是一种文学形式，它使希腊和罗马获得荣耀
     - dramatic adj. 戏剧性的；巨大的
         - The same dramatic technological changes ...have also increased the risk...
@@ -119,7 +122,7 @@
         - fine
         - final
 - fishery [ˈfɪʃəri]
-    - n. 渔场 
+    - n. 渔场
 - fun
     - adj. 有趣的
 - green
@@ -132,8 +135,8 @@
     - multi- 多
         - multiform 多样的
 - muscle [ˈmʌsl]
-    - n. 肌肉；力量；实力；体力 
-- narrow
+    - n. 肌肉；力量；实力；体力
+- narrow [ˈnæroʊ]
     - adj. 狭窄的；狭隘的；勉强的； v. 使变窄；缩小
     - a narrow concept 一个狭隘的概念
     - narrow victory 勉强胜利
@@ -157,7 +160,7 @@
     - retailer n. 零售商
     - detail n. 细节
 - scene [siːn]
-    - n. 场面；情景；现象 
+    - n. 场面；情景；现象
     - The team's victory(胜利) produced scenes of joy(喜悦) all over the country.
 - sea
     - n. 海；海洋(靠近陆地的)
@@ -184,8 +187,8 @@
         - indeed adv. 真正地，当然；确实（同一方面递进）
     - additional adj. 额外的；附加的
 - weak [wiːk]
-    - adj. **虚弱的；能力弱的**； 灯光的微弱；稀薄的 
-    - who are physically weak or crippled([ˈkrɪpl] 跛的)
+    - adj. **虚弱的；能力弱的**； 灯光的微弱；稀薄的
+    - who are physically([ˈfɪzɪkli] adv. 身体上) weak or crippled([ˈkrɪpl] 跛的)
     - the weak lecture 糟糕的演讲
     - weaken v. 使虚弱；减弱
         - ...weaken big tech companies
@@ -211,7 +214,7 @@
 - restaurant
     - n. 餐馆；饭店
 - boring [ˈbɔːrɪŋ]
-    - adj. 没趣的；令人厌倦的 
+    - adj. 没趣的；令人厌倦的
     - bored adj. 厌倦的；烦闷的
     - boring vs bored
         - boring 修饰物 boring game
@@ -219,7 +222,7 @@
 - cry
     - vi. 哭；vt. 叫喊，大喊大叫
     - cry out for 急需
-        - The endless(无尽) legal([ˈliːɡl] 法律) battles <u>cry out for</u> Congress(国会) to act.
+        - The endless(无尽) legal([ˈliːɡl] 法律) battles <u>cry out for</u> Congress([ˈkɑːŋɡrəs] 国会) to act.
     - rallying cry 集结号角
 - red
 - club
@@ -228,7 +231,7 @@
     - tele- 远
         - telephone
 - chemical [ˈkemɪkl]
-    - adj. 化学的； n. 化学制品 
+    - adj. 化学的； n. 化学制品
     - ...a woman's increased dose of stress chemicals... 女性体内压力化学物质的增加
 - nine
 - mood
@@ -256,7 +259,7 @@
 - telephone/phone
     - n. 电话； v. 打电话
 - audience [ˈɑːdiəns]
-    - n. 听众，观众，读者 
+    - n. 听众，观众，读者
     - audi- 听
         - audit n. 审计，审查
     - Who are your most important audiences?
@@ -266,15 +269,15 @@
 - designer
     - n. 设计者；构思者
     - design v. 设计
-- vitamin
+- vitamin [ˈvaɪtəmɪn]
     - n. 维生素
     - vit- 生命
     - **vital** [ˈvaɪtl] adj. 生死攸关的，至关重要的
 - spouse [spaʊs]
-    - n. 配偶 
+    - n. 配偶
     - In Cambodia(柬埔寨), the choice of a spouse is a complex one for the young male.
 - trip
-  - n. 旅游，旅行
+    - n. 旅游，旅行
 - request
 - unable
     - adj. 未能，无法
@@ -283,7 +286,8 @@
 - cap
     - n. 帽子；盖，罩；**最高限额**；vt. 覆盖；**胜过，超过**
     - 最高限额
-        - ...<u>if the cap were lifted(上限)(假设条件，虚拟语气（表示与现实相反的假设）)</u>, increasing GDP by 0.6%. 如果取消上限，GDP将增加0.6%
+        - ...<u>if the cap were lifted(上限)(假设条件，虚拟语气（表示与现实相反的假设）)</u>, increasing GDP by 0.6%.
+          如果取消上限，GDP将增加0.6%
     - 胜过
         - What an amazing story. Can anyone cap that？
 - euro
@@ -293,21 +297,22 @@
     - n. 记者
     - report n./v. 报道；报告
         - We often hear media reports that a hacker(黑客) has been able to access a computer database.
+    - journalist n. 记者
 - soldier
     - n. 士兵，军人
 - stuff
     - n. 原料，材料(== thing)； vt. 填进，塞满
     - stuffed animals 动物玩偶
 - diary [ˈdaɪəri]
-    - n. 日记本 
+    - n. 日记本
     - di- 日子
         - diet n. 日常饮食； vi. 节食
 - pretty
     - adv. 相当，很； adj. 漂亮的
     - a pretty girl(n.)
-    - Most folks(伙计们) still feel pretty comfortable(adj.).
+    - Most folks([foʊk] 伙计们) still feel pretty comfortable(adj.).
 - grammar [ˈɡræmər]
-    - n. 语法（书） 
+    - n. 语法（书）
     - gram- 刻；写
         - program n. 程序
         - diagram n. 图表
@@ -318,10 +323,10 @@
 - radio
     - n. 无线电广播
     - rad- 根
-        - eradicate v. 根除
+        - eradicate [ɪˈrædɪkeɪt] v. 根除
     - The information was transmitted by radio.
 - evil [ˈiːvl]
-    - adj. 邪恶的，有害的； n. 邪恶，罪恶 
+    - adj. 邪恶的，有害的； n. 邪恶，罪恶
     - live -> evil
 - lecture
     - n./v. 演讲，训诫
@@ -346,6 +351,7 @@
     - rush to 急忙做
         - The TSA(运输管理局) is now <u>rushing to</u> get new screeners(审查员 -> 安检人员).
 - arrival
+    - n. 到达
 - lunch
 - unknown
     - adj. 未知的，不祥的
@@ -371,7 +377,7 @@
         - motor n. 发动机
         - motion n. 移动
 - guard [ɡɑːrd]
-    - n. 卫兵； vt. 守卫；看守 
+    - n. 卫兵； vt. 守卫；看守
     - guardian [ˈɡɑːrdiən] n. 保护者；守卫者
     - -ian 专业的人
         - historian 历史学家
