--- a/english/word/simple-word/markdown/p39-p41.md
+++ b/english/word/simple-word/markdown/p39-p41.md
@@ -16,9 +16,9 @@
     - edition n. 版本
 - pointless
     - adj. 无意义的；无目标的；不值得做的
-- junior
+- junior [ˈdʒuːniər]
     - adj. 年少的；资历较浅的； n. 年少者；大三学生
-    - senior
+    - senior [ˈsiːniər]
 - rain
 - pregnant [ˈpreɡnənt]
     - adj. 怀孕的；妊娠的
@@ -26,8 +26,8 @@
 - exit
     - n. 出口， vi. 离开
     - it- 走
-        - initiate 开始，开创
-        - ambition 雄心，野心
+        - initiate [ɪˈnɪʃieɪt 开始，开创
+        - ambition [æmˈbɪʃn] 雄心，野心
 - amazed
     - adj. 惊奇的，惊讶的
     - amaze vt. 大为惊奇，使惊愕
@@ -58,7 +58,7 @@
 - update
 - greatness
     - n. 伟大，崇高
-- wire
+- wire [ˈwaɪər]
     - n. 电线；电报；
         - hard-wired adj. **本能的，天生的**；硬链接的
             - We can reduce or even <u>eliminate(清除)</u> the negative effects of our quick，hard-wired responses.
@@ -67,9 +67,11 @@
 - rocket
     - vi. **迅速上升，猛涨**；n. 火箭
     - Costs have rocketed and ticket prices have stayed low.
-- comedy
+- comedy  [ˈkɑːmədi]
     - n. 喜剧；滑稽，诙谐
-    - ...under the <u>incentive(驱动)</u> of classical tragedy(悲剧) and comedy.
+    - ...under the <u>incentive([ɪnˈsentɪv] 驱动)</u> of classical tragedy([ˈtrædʒədi] 悲剧) and comedy.
+- tragedy  [ˈtrædʒədig]
+  - n. 惨事，悲剧
 - golf
     - n. 高尔夫球运动
 - harbor/harbour [ˈhɑrbər]
@@ -99,13 +101,13 @@
     - Can you polish the top of table?
 - battery
     - n. 电池组；一系列，一套
-    - The application of clean energy has boosted(提升) battery storage
+    - The application of clean energy([ˈenərdʒi]) has boosted([buːst] 提升) battery storage
     - a battery of 一系列
         - In one study，participants completed a battery of eight tasks.
 - dog
 - awful
     - adj. 可怕的；极坏的；adv. 非常
-    - awe 敬畏；使惊惧
+    - awe [ɔː] 敬畏；使惊惧
     - The problem with being a grown up is that there's an awful lot of serious stuff to deal with
 - photography
     - n. 照相术，摄影
@@ -114,10 +116,10 @@
 - drag
     - vt. 拖，拉； n. 拖拽；累赘
     - Wasted time is a drag on Americans' economic(经济的)...
-- unit
+- unit [ˈjuːnɪt]
     - n. 单元；部件
 - Saturday
-- chop
+- chop [tʃɑːp]
     - v. 劈，砍，斩
 - bored [bɔːrd]
     - adj. 厌烦的，厌倦的
@@ -125,12 +127,12 @@
     - v./n. 擦，抹； n. 湿巾
     - v. 擦
         - Customers eat snacks(小吃) or wipe counters almost without thinking.
-    - disinfecting wipes 消毒湿巾
+    - disinfecting([ˌdɪsɪnˈfɛkt]) wipes 消毒湿巾
 - adjective
     - n. 形容词
 - chamber  [ˈtʃeɪmbə(r)]
     - n. 会议室；房间
-    - Two monkeys were placed in separate(分离) but adjoining(毗邻) chambers.
+    - Two monkeys were placed in separate([ˈsepəreɪt] 分离) but adjoining([əˈdʒɔɪnɪŋ] 毗邻) chambers.
 - ink
     - n. 墨水，油墨
 - guy
@@ -144,7 +146,7 @@
 - laziness
     - n. 无精打采，懒惰
     - lazy adj. 懒散的，懒惰的
-    - 我在床上lazy（懒惰的），感觉十分cozy（舒适的），妈妈气的crazy（疯狂的）
+    - 我在床上lazy（懒惰的），感觉十分cozy（[ˈkoʊzi] 舒适的），妈妈气的crazy（疯狂的）
 - whereby
     - adv. 借此，凭此；由于
     - 修饰 plan, policy, approach([əˈproʊtʃ] 方法), method 等（方式方法）
@@ -173,15 +175,22 @@
 - shirt
 - blog
 - football
-    - soccer
+    - soccer [ˈsɑːkər] n. 足球
 - geographic [ˌdʒiə'ɡræfɪk]
     - adj. 地理学的；地理的
     - geography [dʒiˈɑːɡrəfi] n. 地理学；地理
+- geometry [dʒiˈɑːmətri]
+    - n. 几何；几何图形
+    - geography [dʒiˈɑːɡrəfi] n. 地理（学）
 - thinker
 - soap [səʊp]
     - n. 肥皂
     - soup [suːp] n. 汤
-- prose
+- soak [soʊk]
+    - v. 浸泡
+    - ...socked in holy water.
+    - suck
+- prose [proʊz]
     - n. 散文
 - ant
     - n. 蚂蚁
@@ -198,22 +207,18 @@
     - adj. 暴力的，猛烈的
 - housework
 - sing
-- soak [soʊk]
-    - v. 浸泡
-    - ...socked in holy water.
-    - suck
 - meantime
     - adv. 其间，其时
 - uneasy
     - adj. 不安的；担心的
 - February
-- bet
+- bet [bet]
     - vt. 以...打赌；vi. 打赌
     - He still likes to bet (on) the horses.
     - bet-bet-bet-betting
     - bet-betted-betted-betting
 - ninety
-- plane
+- plane [pleɪn]
     - n. **飞机**，平面
     - pla- 平
 - menu
@@ -223,31 +228,29 @@
     - Sit down to read and the <u>flywheel(飞轮)</u> of work-related thoughts keeps spinning.
 - mate
     - n. 伙伴，配偶
+- classmate
 - toll
     - n. **通行费**；**损失**；伤亡人数；v. 敲钟
     - Every entrance ticket lists a toll-free number.
     - 损失 take a toll on 对...造成损失
-        - Many everyday tasks <u>take</u> a surprising <u>toll on</u> the environment.
+        - Many everyday tasks <u>take</u> a surprising([sərˈpraɪzɪŋ]) <u>toll on</u> the environment.
 - foam [foʊm]
     - n. 泡沫
-- classmate
 - excellence
     - n. 优秀；杰出
 - killer
 - wonderful
+    - adj. 精彩的; 令人高兴的; 令人惊奇的
 - await
     - vt. 等待，等候
         - They are awaiting the birth of their first child.
     - wait vi.
         - I will be right here waiting for you.
-- geometry [dʒiˈɑːmətri]
-    - n. 几何；几何图形
-    - geography [dʒiˈɑːɡrəfi] n. 地理（学）
 - **owing to** [ˈoʊɪŋ]
     - prep. 由于，因为
         - Monarchs are kept as heads of state in Europe mostly owing to their undoubted and respectable status.
           在欧洲君主被视为国家首脑最主要是因为他们不受争议的受人尊敬的地位。
-    - owe v. **归因于**；欠
+    - owe [oʊ] v. **归因于**；欠
         - Most didn't realize they owed it and few paid.
         - High achievers owe their success mostly to <u>nurture(培养)</u>.
 - toxic [ˈtɑːksɪk]
@@ -282,8 +285,7 @@
 - snack
     - n. 快餐，小吃； v. 吃点心
     - snack snake 贪吃蛇
-- tragedy  [ˈtrædʒədig]
-    - n. 惨事，悲剧
+    - snake n. 蛇
 - bush
     - n. 灌木，灌木丛
     - beat around the bush 拐弯抹角
@@ -300,7 +302,7 @@
     - 脱去；流出；散发；摆脱
         - US factories shed workers so fast.
     - shed light on 阐明；点亮；启发 = enlighten
-        - A recent annual study <u>sheds</u> some <u>light on</u> that question.
+        - A recent annual([ˈænjuəl]) study <u>sheds</u> some <u>light on</u> that question.
 - beneath [bɪˈniːθ]
     - prep. 在...下面
     - <u>It is</u> the masses beneath them <u>that(正是)</u> are left behind.
