--- a/english/word/simple-word/markdown/p24-p26.md
+++ b/english/word/simple-word/markdown/p24-p26.md
@@ -23,7 +23,7 @@
     - n. 公园；停车场；vt. 停车
 - map
     - n. 地图；vt. 绘制地图
-    - The researchers mapped the city's vast(广阔的) areas.
+    - The researchers mapped the city's vast([væst] 广阔的) areas.
 - deeply
     - adv. 很；非常；极其（表示强调）
     - Beethoven was a deeply political man... 贝多芬是一个极其具有政治色彩的人
@@ -34,7 +34,7 @@
 - pack
     - n. 包裹；一群(a pack of)； v. 打包；塞满
     - 塞满
-        - More people are trying to overpack their carry-on bags.
+        - More people are trying to over pack their carry-on bags.
     - a pack of deal 一揽子交易
     - a pack of plan 一揽子计划
     - 包装
@@ -43,12 +43,12 @@
         - 包装 pack vs package
             - package 外包装
             - pack 包装这个动作
-- hug
+- hug [hʌɡ]
     - vt. 拥抱
     - hug-hugged-hugged-hugging
     - huge adj. 巨大的
 - ground
-    - n. 地面；土地；**根据，依据**
+    - n. **根据，依据**；地面；土地
     - floor vs ground
         - floor 屋内、平整的地面
         - ground 外面的
@@ -59,7 +59,7 @@
 - dozen
     - n. 打
 - fifty
-- seldom
+- seldom [ˈseldəm]
     - adv. 很少，不常
     - Public-sector(部门) unions(工会) seldom get in trouble for their actions.
 - skilled
@@ -85,6 +85,7 @@
         - Even the Volkswagen(大众汽车) rear engine car was anticipated(预测).
     - 抚养
         - Celebrity(名人) moms have influenced(受影响) our attitude towards child rearing. 名人妈妈们影响了我们对育儿的看法
+    - wear v. 穿，戴;
 - wood
     - n. 木材，木料；（pl. woods）树林
 - folk [foʊk]
@@ -105,15 +106,15 @@
 - branch
     - n. 树枝；分支；分流
     - br- == bur- 燃烧
-    - There are two separate(分离的) and hostile(敌对的) branches.
-- sugar [foʊk]
+    - There are two separate([ˈsepəreɪt] 分离的) and hostile(敌对的) branches.
+- sugar
     - n. 糖；（食用糖）；vt. 在...中加糖
     - candy n. 糖果
 - fellow [ˈfeloʊ]
     - n. 同伙，同事；会员； adj. 同伴的，同事的 
     - Rats can send out warning message to their fellow.
 - miss
-    - n. 小姐； vt. **想念；错过；漏掉**
+    - vt. **想念；错过；漏掉**；n. 小姐
     - miss- 送
 - station
     - n. 车站
@@ -139,7 +140,7 @@
 - flu
     - n. 流感；流行性感冒
     - swine flu 猪流感
-    - epidemic adj. 流行的； n. 流感 [ˌepɪˈdemɪk]
+    - epidemic [ˌepɪˈdemɪk] adj. 流行的； n. 流感
 - false
     - adj. 错误的；虚伪的；不实的
     - falsely adv. 错误地，不实地
@@ -158,10 +159,10 @@
     - n. 假期；假日
 - heaven [ˈhevn]
     - n. 天堂；(pl.)天空；乐事 
-    - Europe is not a gender-equality heaven.
-    - heavy adj. 重的 [ˈhevi]
-- belt
-    - n. 腰带；皮带；地带；地区 [belt]
+    - Europe is not a gender-equality([iˈkwɑːləti]) heaven.
+    - heavy [ˈhevi] adj. 重的
+- belt [belt]
+    - n. 腰带；皮带；地带；地区
     - They do some modest belt-tightening.
     - safety belt 安全带
     - conveyor([kənˈveɚ]) belt 传送带
@@ -174,12 +175,13 @@
     - n. 发动机；电动机；汽车
 - window
     - n. 窗户，窗口
-- tone
-    - "频率" => n. **（肌肉）张力**；**语气；音调**，声调；色调； v. 增强（tone up）
+- tone [toʊn]
+    - n. **（肌肉）张力**；**语气；音调**，声调；色调； v. 增强（tone up）
     - 语气，语调
         - softened(软化) his tone and adopted(采用) some new policy.
     - 张力
         - decreasing muscle(肌肉, [ˈmʌsl]) tone
+    - stone [stoʊn] n. 石头;
 - proud
     - adj. 骄傲的，傲慢的
     - be proud of 对...感到骄傲
@@ -209,7 +211,7 @@
 - June [dʒuːn]
 - stream
     - n. 小溪，溪流
-    - The tourist(游客) streams are not entirely separate(分离).
+    - The tourist(游客) streams are not entirely separate([ˈsepəreɪt] 分离).
 - previous [ˈpriːviəs]
     - adj. 先前的，以往的 
     - According to Paragraph 1，most previous surveys(调查) found that home
@@ -220,10 +222,10 @@
 - tooth
     - n. 牙，齿（pl. teeth）
 - index
-    - n. （pl. indexes，indices）索引；**标志**；**指数（统计学）**
+    - n. **标志**；**指数（统计学）**；（pl. indexes，indices）索引
     - indicate v. 表明，表示出
     - 指数
-        - Obesity(肥胖) is often defined by body mass index or BMI.
+        - Obesity([oʊˈbisəti] 肥胖) is often defined by body mass index or BMI.
 - readily
     - adj. 乐意的，欣然的
     - 乐意的
@@ -239,13 +241,13 @@
     - 薪水: wage vs salary
         - wage 短期
         - salary 长期
-- defend
+- defend [dɪˈfend]
     - vt. **保护；保卫**，防卫；为...辩护
     - Without the ability to defend their ideas，they cannot fully participate(参加) in our democracy([dɪˈmɑːkrəsi] 民主).
       如果没有捍卫自己观点的能力，他们就不能在我们的民主制度中充分参与
     - defender n. 守卫；后卫
     - defendant n. 被告
-- legally
+- legally [ˈliɡlɪ]
     - adv. 法律上地；合法地
     - legal adj. 合法的 [ˈliːɡl]
 - empty
@@ -257,13 +259,13 @@
 - temperature
     - n. 体温；温度
     - take one's temperature 量体温
-    - temper v. 使缓和，使调和； n. 脾气
-        - Egalitarian(平等主义者) sentiments(平等感) were often tempered by fears. 平等主义的情感常常被恐惧所抑制
+    - temper [ˈtempər] v. 使缓和，使调和； n. 脾气
+        - Egalitarian([iˌgælɪˈteriən] 平等主义者) sentiments([ˈsentɪmənt] 平等感) were often tempered by fears. 平等主义的情感常常被恐惧所抑制
     - temporary adj. 暂时的，临时的
 - socially
     - adv. 社会上地；善于交际的
     - soc- 联合
-    - social adj. 社会的，社交的 [ˈsoʊʃl]
+    - social [ˈsoʊʃl] adj. 社会的，社交的
 - pleasant
     - adj. 令人愉快的；可喜的
 - fourth
@@ -271,10 +273,10 @@
     - adj. 疲劳的，累的；厌倦的，厌烦的（tired of）
 - nervous
     - adj. 焦虑的；紧张的
-- wild
-    - adj. 野生的；荒凉的 [waɪld]
-    - mild adj. 温和的 [maɪld]
-    - wide adj. 宽的 [waɪd]
+- wild [waɪld]
+    - adj. 野生的；荒凉的
+    - mild [maɪld] adj. 温和的
+    - wide [waɪd] adj. 宽的
 - mobile
     - n. 移动电话； adj. 非固定的
     - mov- == mob- == mot- 移动
@@ -300,7 +302,7 @@
 - volume
     - n. 卷，册，书卷；体积，容量；响度
     - vol- 卷，轴
-        - **involve** v. 涉及，卷入 [ɪnˈvɑːlv]
+        - **involve** [ɪnˈvɑːlv] v. 涉及，卷入
     - a two-volume report 两卷报道
     - n. 量
         - <u>The IT industry(信息技术产业)</u> produces about <u>the same</u> volume of greenhouse gases <u>as</u> the
@@ -329,7 +331,7 @@
     - n. 谷物；颗粒；少量
     - fine-grained information 颗粒度很细的信息
 - spell
-    - vt. **拼写；意味着；招致**； n. 符咒；魅力；**一段时间**
+    - vt. **拼写；意味着；招致**； n. **一段时间**；符咒；魅力
     - 拼写
         - Can you spell it？
     - 符咒
@@ -337,7 +339,7 @@
     - 招致
         - I'm afraid this spell trouble！
     - 一段时间
-        - bringing prominence(名声) for a spell
+        - bringing prominence([ˈprɑːmɪnəns] 名声) for a spell
 - wheel [wiːl]
     - n. **轮，车轮**；vt. 推，拉；vi. 转动，旋转 
     - ferries([ˈferi]) wheel 摩天轮
@@ -362,7 +364,7 @@
 - fan
     - n. **狂热爱好者，迷**； 扇子vt. **煽动，扇**；
     - 煽动
-        - Favoritism(偏袒) in official(官方的) access can fan public perceptions(看法) of corruption(腐败).
+        - Favoritism(['feɪvərɪtˌɪzəm] 偏袒) in official(官方的) access can fan public perceptions([pərˈsepʃn] 看法) of corruption([kəˈrʌpʃn] 腐败).
           官方渠道上的偏袒会加剧公众对腐败的印象
 - sad
     - adj. 悲伤的
@@ -398,9 +400,9 @@
 - ship
     - n. 船； vt. 用船运运送，装运
     - 运送
-        - If a business was shipping a customer's purchase to a state...
-- vice
-    - n. 缺点，弱点；邪恶；道德败坏 [vaɪs]
+        - If a business was shipping a customer's purchase([ˈpɜːrtʃəs] n. 购买) to a state...
+- vice [vaɪs]
+    - n. 缺点，弱点；邪恶；道德败坏 
     - Idleness(懒惰) is not just a vacation, an indulgence([ɪnˈdʌldʒəns] 沉溺) or a vice.
 - visa
     - n. 签证
@@ -408,7 +410,7 @@
         - visit
 - exam
     - n. 考试，测验
-    - examination n. 考试，测验
+    - examination [ɪɡˌzæmɪˈneɪʃn] n. 考试，测验
 - army [ˈɑːrmi]
     - n. 军队，大批
     - But creating a future army of coders(编码) is not the sole(唯一) purpose([ˈpɜːrpəs] 目的) of the classes.
