--- a/english/word/simple-word/markdown/p27-p29.md
+++ b/english/word/simple-word/markdown/p27-p29.md
@@ -1,4 +1,4 @@
-# p27-p29
+# P27-P29
 
 - trail [treɪl]
     - n. **小径；痕迹** vi. （被）拖； vt. 跟踪，追踪
@@ -66,7 +66,7 @@
 - linguist [ˈlɪŋɡwɪst]
     - n. 语言学家；通晓数国语言的人
     - lingu- 语言
-        - bilingual adj. 双语的 [ˌbaɪˈlɪŋɡwəl]
+        - bilingual [ˌbaɪˈlɪŋɡwəl] adj. 双语的
 - goods
     - n. 商品；货物
     - commodity [kəˈmɑːdəti] 商品
@@ -136,7 +136,7 @@
     - 听到 hear vs listen
         - hear 注重结果
         - listen 注重动作
-- bright
+- bright [ˈbrīt ]
     - adj. **明亮的**；鲜艳的；聪明的；有希望的
 - pioneer [ˌpaɪəˈnɪr]
     - n. **先驱者，创始人**；vt. 开拓
@@ -184,6 +184,8 @@
     - flow 流
     - epidemic [ˌepɪˈdemɪk] adj. 流行的；n. 流感
 - nose
+    - n. 鼻子;
+    - noise n. 噪音; 喧闹声;
 - surgery
     - n. 外科，外科手术
     - sur- 在..之上
@@ -199,7 +201,7 @@
 - deem
     - vt. 认为，视为
     - 视为: deem == think == consider
-    - Mauna Kea is deemed as an ideal astronomical([ˌæstrəˈnɑːmɪkl] 天文) site.
+    - Mauna Kea is deemed as an ideal astronomical([ˌa-strə-ˈnä-mi-kəl] 天文) site.
 - costly
     - adj. 昂贵的，代价高的
     - cost n. 成本，v. 花费
@@ -243,12 +245,13 @@
     - worthless adj. 没用的，无价值的
 - newsroom
     - n. 新闻编辑室
-- blow
+- blow [bloʊ]
     - n. **打击** v. **吹；吹气**；爆炸；
     - 吹气
         - What happens when the wind doesn't blow or the sun doesn't shine？
     - 打击
         - ...avoiding(避免) a blow to their reputations([ˌrepjuˈteɪʃn] 声誉)...
+    - below prep. 在...下面; adv. 在下面; 在下文中
 - arm
     - n. 手臂，扶手；（pl.）武器； vt. 装备
     - 武装
@@ -266,7 +269,7 @@
     - 偏袒 play favorites
         - Official must not be allowed to <u>play favorites</u> in providing information...
 - supermarket
-- bold
+- bold [boʊld]
     - adj. **勇敢的；鲁莽的**；黑体的
     - ...bold imagination and scientific accuracy([ˈækjərəsi] 准确性).
 - steadily [ˈstɛdəlɪ]
@@ -280,9 +283,10 @@
 - row
     - n. **排，行**；v./n. 划船
     - the troublemakers(麻烦制造者) in the back row
-- band
+- band [bænd]
     - n. **乐队；带**；vt. 用带绑扎
     - band-aid 邦迪创可贴；临时补救
+    - brand [brænd]
 - solely [ˈsoʊlli]
     - adv. 仅；只；唯；单独地
     - sol- 太阳，独自
@@ -293,11 +297,12 @@
     - adj. 内部的，核心的
 - paycheck
     - n. 付薪水的支票；薪水
-- specify
+- specify [ˈspesɪfaɪ]
     - vt. 具体说明；具体指定
     - spect- == spec- 看
     - ...specifying the details of the project.
     - **specific** [spəˈsɪfɪk] adj. 具体的；特定的
+    - especial [ɪˈspeʃl] adj. 特别的，突出的
 - tighten
     - v. 使变紧
 - jam
@@ -378,7 +383,7 @@
     - global adj. 全球的
     - globally adv. 全球地
     - globalization n. 全球化
-- navy
+- navy [ˈneɪvi]
     - n. 海军
     - nav- 船
         - navigate v. 遨游，航线
@@ -414,10 +419,11 @@
 - fierce [fɪrs]
     - adj. 凶猛的；猛烈的；狂暴的
     - fierce competition 激烈的竞争
-- joy
+- joy [dʒɔɪ]
     - n. 喜悦，乐事
     - enjoy v. 享受
     - joy City 大悦城
+    - toy n. 玩具
 - founder
     - n. 建立者
     - found v. 建立；创建
