feat: add 015 write

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -177,6 +177,15 @@ Dear friends,<br>
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
 
+## 015
+
+Dear Mr. Snakespeare,<br>
+&emsp;&emsp;&emsp;&emsp;I am writing to express my heartfelt gratitude. I am referring to that unfortunate accident the other day, when I was knocked off my bike by a taxi.<br>
+&emsp;&emsp;&emsp;&emsp;If it had not been for your timely assistance in giving me first aid, I fear that the consequences might have been very serious. Everyone agrees that it is your quick-witted response in that emergency that had led to this satisfactory outcome.
+&emsp;&emsp;&emsp;&emsp;Although nowadays people in mounting numbers talk about the need to be unselfish, we see very few people practise what they preach. If there were more people like you, this world would be a much nicer place.<br>
+
+<p align="right">Yours sincerely,</p>
+<p align="right">Li Ming</p>
 
 
 <p align="right"></p>
