--- a/math/latex/demo.tex
+++ b/math/latex/demo.tex
@@ -84,16 +84,14 @@
     \end{tabular}
 
     \subsection{基础}
-    行内公式
-
+    行内公式 \\
     \( a^2 + b^2 = c^2 \) \qquad $ a^2 + b^2 = c^2 $
 
     独立公式：
 
     \[
         \int_0^{\pi} \sin(x)\, dx = 2
-    \]
-
+    \] \\
     $$ a^2 + b^2 = c^2 $$
 
     \subsection{上下标}
@@ -122,19 +120,14 @@
 
     \subsection{行列式}
 
-    \[
     \begin{vmatrix}
         a & b \\ c & d
     \end{vmatrix}
-    \]
 
     \subsection{矩阵}
-
-    $$
     \begin{bmatrix}
         a & b \\ c & d
     \end{bmatrix}
-    $$
 
     \[
         A = \begin{bmatrix}
@@ -192,52 +185,5 @@
     插入示意图：
 
     \includegraphics[width=1\linewidth]{tense.jpeg}
-% =========================
-% 正文示例
-% =========================
-
-    \part{线性代数}
-
-    \chapter{行列式}
-
-    \section{基础}
-    \subsection{定义与性质}
-    \subsubsection{行列式的定义}
-    \subsubsection{行列式的基本性质}
-
-    \subsection{计算方法}
-    \subsubsection{按行/列展开}
-    \subsubsection{对角线法则（2×2, 3×3）}
-
-    \section{克拉默法则}
-    \subsection{线性方程组解法}
-    \subsubsection{唯一解情况}
-    \subsubsection{无解或无穷多解情况}
-
-    \chapter{矩阵}
-
-    \section{初等变换}
-    \subsection{初等行变换}
-    \subsubsection{交换两行}
-    \subsubsection{行倍加}
-    \subsubsection{行乘非零常数}
-
-    \subsection{初等列变换}
-    \subsubsection{交换两列}
-    \subsubsection{列倍加}
-    \subsubsection{列乘非零常数}
-
-    \section{伴随矩阵}
-    \subsection{伴随矩阵定义}
-    \subsubsection{余子式矩阵}
-    \subsubsection{转置操作}
-
-    \section{矩阵的秩}
-    \subsection{秩的定义}
-    \subsubsection{行秩与列秩}
-    \subsubsection{零矩阵的秩}
-    \subsection{秩的计算方法}
-    \subsubsection{初等变换法}
-    \subsubsection{阶梯形矩阵法}
 
 \end{document}
