--- a/english/word/simple-word/markdown/p39-p41.md
+++ b/english/word/simple-word/markdown/p39-p41.md
@@ -26,7 +26,7 @@
 - exit
     - n. 出口， vi. 离开
     - it- 走
-        - initiate [ɪˈnɪʃieɪt 开始，开创
+        - initiate [ɪˈnɪʃieɪt] 开始，开创
         - ambition [æmˈbɪʃn] 雄心，野心
 - amazed
     - adj. 惊奇的，惊讶的
@@ -91,7 +91,7 @@
     - special adj. 特别的，具体的
 - pile [paɪl]
     - n. 一堆，一叠； vt. 堆积，堆放； vi. 蜂拥，涌入
-    - a pile of 一些，一些列
+    - a pile of 一些，一系列
         - Each participant was shown a pile of pens.
     - 涌入
         - ...more students to pile into law schools.
@@ -145,7 +145,7 @@
 - shortly
 - laziness
     - n. 无精打采，懒惰
-    - lazy adj. 懒散的，懒惰的
+    - lazy [ˈleɪzi] adj. 懒散的，懒惰的
     - 我在床上lazy（懒惰的），感觉十分cozy（[ˈkoʊzi] 舒适的），妈妈气的crazy（疯狂的）
 - whereby
     - adv. 借此，凭此；由于
@@ -181,7 +181,6 @@
     - geography [dʒiˈɑːɡrəfi] n. 地理学；地理
 - geometry [dʒiˈɑːmətri]
     - n. 几何；几何图形
-    - geography [dʒiˈɑːɡrəfi] n. 地理（学）
 - thinker
 - soap [səʊp]
     - n. 肥皂
@@ -189,9 +188,10 @@
 - soak [soʊk]
     - v. 浸泡
     - ...socked in holy water.
-    - suck
+    - suck v. 吮吸; 吸引;
 - prose [proʊz]
     - n. 散文
+    - essay n. 散文
 - ant
     - n. 蚂蚁
 - unimportant
@@ -211,7 +211,7 @@
     - adv. 其间，其时
 - uneasy
     - adj. 不安的；担心的
-- February
+- February [ˈfebrueri]
 - bet [bet]
     - vt. 以...打赌；vi. 打赌
     - He still likes to bet (on) the horses.
