--- a/english/word/simple-word/markdown/p30-p32.md
+++ b/english/word/simple-word/markdown/p30-p32.md
@@ -2,7 +2,10 @@
 
 - pool
     - n. 水池；vt. 汇聚，把...集中在一起
-    - a way of pooling assets
+    - a way of pooling assets([ˈæset])
+- poll [poʊl]
+    - n. 民意测验；选举投票
+    - pull [pʊl] v. 拉
 - yours
 - myself
 - convenient
@@ -40,7 +43,7 @@
 - reshape
     - v. 重塑
 - tuition [tuˈɪʃn]
-    - n. 教学，指导；学费 
+    - n. 教学，指导；学费
 - subheading
     - n. 副标题，小标题
     - sub- 在...之下
@@ -54,19 +57,20 @@
 - hair
     - n. 头发，毛发
 - camp [kæmp]
-    - n. 野营，营地； vi. 露营 
+    - n. 野营，营地； vi. 露营
     - Suppose your university is going to host a <u>summer camp</u> for high school students.
         - summer camp 夏令营
 - lag [læɡ]
-    - vi. 拖后腿，走得慢 
-    - Graduates from elite([ɪˈliːt] 精英) universities tend to lag behind the others <u>due to(由于)</u> decreased opportunities.
+    - vi. 拖后腿，走得慢
+    - Graduates from elite([ɪˈliːt] 精英) universities tend to lag behind the others <u>due to(由于)</u> decreased
+      opportunities.
     - leg n. 腿
 - loser
 - coal [koʊl]
-    - n. 煤块 
+    - n. 煤块
     - cold
 - drought [draʊt]
-    - n. 干旱；旱灾 
+    - n. 干旱；旱灾
 - guess
     - v./n. 猜测；推测
 - reorganize
@@ -83,14 +87,14 @@
     - 应该
         - I will be your God and you shall be my people.
 - chew [tʃuː]
-    - v. 咀嚼，嚼碎 
+    - v. 咀嚼，嚼碎
 - trillion [ˈtrɪljən]
-    - num. 万亿；兆 
+    - num. 万亿；兆
     - billion 十亿
     - million 百万
     - 1(trillion),000(billion),000(million),000(thousand),000
 - terrible
-    - adj. 极度的；可怕的；**糟糕的**
+    - adj. **糟糕的**；极度的；可怕的
     - A clean copy <u>fresh off(刚刚完成/出炉)</u> a printer may look terrible.
     - terri- 恐怖
         - terror [ˈterər] n. 恐怖；可怕的人；恐怖的事
@@ -102,28 +106,28 @@
     - n. 磅（重量）；英镑； v. 猛烈敲击
     - pend- 悬挂；花销
 - nasty [ˈnæsti]
-    - adj. 令人讨厌的；险恶的；下流的 
+    - adj. 令人讨厌的；险恶的；下流的
 - gold
     - n. 黄金；金色；adj. 金质的；金色的
     - gold rush 淘金热
     - golden adj. 金色的；金制的
 - shore [ʃɔːr]
-    - n. 海滨； vt. 支持，支撑(shore up) 
+    - n. 海滨；vt. 支持，支撑(shore up)
     - The government used subsidies(津贴) to <u>shore (up)</u> farm prices.
     - share
 - funny
     - adj. 滑稽的；稀奇的；可笑的，稍感不适的
 - bury [ˈberi]
-    - vt. 掩藏，掩埋 
+    - vt. 掩藏，掩埋
     - bur- == br- 燃烧
     - Archaeologists([ˌɑːrkiˈɑːlədʒɪst] 考古学家) also may locate(定位) buried remains by using technologies.
 - cucumber [ˈkjuːkʌmbər]
-    - n. 黄瓜 
+    - n. 黄瓜
 - suburb [ˈsʌbɜːrb]
-    - n. 市郊；郊区 
+    - n. 市郊；郊区
     - urban
 - enemy [ˈenəmi]
-    - n. 敌人；敌国 
+    - n. 敌人；敌国
     - They can identify(辨认) friends to cooperate with and enemies to avoid. 他们能够辨认出可以合作的朋友，以及需要回避的敌人
 - gate
     - n. 大门；入口；登机口
@@ -137,12 +141,13 @@
     - Some of the contents of this gas pollute the atmosphere([ˈætməsfɪr] 大气层).
     - pollution n. 污染物
 - charitable [ˈtʃærətəbl]
-    - adj. 慈善事业的；慈善团体的 
+    - adj. 慈善事业的；慈善团体的
     - charity n. 慈善事业
         - care- 关心
-        - Buying gifts or giving to charity is often more pleasurable([ˈplɛʒərəbəl]) than purchasing([ˈpɜːrtʃəs] 购买) things for oneself.
+        - Buying gifts or giving to charity is often more pleasurable([ˈplɛʒərəbəl]) than purchasing([ˈpɜːrtʃəs] 购买)
+          things for oneself.
 - fossil [ˈfɑːsl]
-    - n. **化石**；老顽固 
+    - n. **化石**；老顽固
     - pos- == fos- 放置
     - The fossil record shows that many species(物种) have endured([ɪnˈdʊr] 持续存在/忍受/经受住) for millions of years.
 - float
@@ -158,7 +163,7 @@
 - politically [pəˈlɪtɪklɪ]
     - adv. 政治上
     - policy [ˈpɑːləsi] n. 政策
-    - political [pəˈlɪtɪkl] adj. 政治的 
+    - political [pəˈlɪtɪkl] adj. 政治的
 - sick
     - adj. 患病的；想吐的；腻烦的；厌恶的(sick of)
     - 生病的
@@ -170,14 +175,14 @@
         - circular adj. 圆圈的，环的
     - You may have a circle of friends...
 - whenever
-    - conj. 无论何时，**每当**
+    - conj. **每当**，无论何时
     - Whenever I recite(背诵) words，I will think of my vocabulary teacher.
 - perfectly
     - adv. 完全地，十分
 - grocery [ˈɡroʊsəri]
-    - n. 食品杂货店 
+    - n. 食品杂货店
 - creature [ˈkriːtʃər]
-    - n. 生物，人，动物 
+    - n. 生物，人，动物
     - They are good-natured，cooperative creatures.
     - create v. 创造，产生
         - cre- 产生
@@ -187,7 +192,7 @@
     - luck n. 运气；好运
     - lock v. 锁
 - personnel [ˌpɜːrsəˈnel]
-    - n. 人员，**员工**；人事部门 
+    - n. **员工**，人员；人事部门
     - ~~a/an personnel~~
     - personal adj. 个人的
     - personally adv. 在个人看来
@@ -198,7 +203,7 @@
     - adj. 活着的；存在的；有活力的
     - ...stay alive，but have fewer children.
 - square [skwer]
-    - n. **广场；平方**；正方形；adj. **平方的**；直角的 
+    - n. **广场；平方**；正方形；adj. **平方的**；直角的
     - quar- 四
         - quarter 四分之一 [ˈkwɔːrtər]
     - 平方
@@ -209,11 +214,8 @@
     - If you're not sure，ask for honest feedback from trusted friends.
     - dishonest adj. 不诚实的；骗人的；欺骗性的
     - honestly adv. 诚实地；正当地
-- poll [poʊl]
-    - n. 民意测验；选举投票
-    - pull [pʊl] v. 拉 
 - youth [juːθ]
-    - n. 青春，青少年时代(不可数)；青年(可数) 
+    - n. 青春，青少年时代(不可数)；青年(可数)
     - lead more youths into criminal([ˈkrɪmɪnl]) behavior
     - young adj. 年轻的
 - ride
@@ -222,7 +224,7 @@
         - Princes(王子) and princesses(公主) have day-jobs and ride bicycles，not horses(马匹).
     - She took some friends for a ride in the family car.
 - pause [pɔːz]
-    - vi./n. 暂停，中止 
+    - vi./n. 暂停，中止
 - soft
     - adj. 软的；柔软的；轻柔的；柔和的；温和的；不含酒精的
     - soft passage 轻柔的乐章
@@ -232,7 +234,7 @@
     - undermine v. 破坏
         - Providing too little security([sɪˈkjʊrəti]) undermines public support.
 - ring
-    - n. 戒指；**环；铃声**；打电话
+    - n. **环；铃声**；戒指；打电话
 - son
 - tear
     - v. 撕裂；撕；n. 眼泪；泪珠
@@ -242,19 +244,19 @@
     - 眼泪
         - They become sad when the tears begin to flow.
 - tobacco [təˈbækoʊ]
-    - n. 烟草，烟叶 
+    - n. 烟草，烟叶
 - thesis [ˈθiːsɪs]
-    - n. 论文；论题 (pl. theses) 
+    - n. 论文；论题 (pl. theses)
     - theme + analysis
 - bother [ˈbɑːðər]
-    - vt. 打扰；使不安 
+    - vt. 打扰；使不安
     - This has long bothered policymakers in poor countries.
     - brother n. 兄弟
 - brown
     - adj. 棕色的，褐色的； n. 褐色
     - br- == bur- 燃烧
 - depict [dɪˈpɪkt]
-    - vt. 描绘，描写，描述 
+    - vt. 描绘，描写，描述
     - de 前缀 向下
     - pic- 描绘
         - picture
@@ -262,6 +264,9 @@
 - runner
 - lane
     - n. 小路，车道
+    - trail [treɪl] n. **小径；痕迹**
+    - pathway n. 小路，小径
+    - path n. 小路
 - puritan [ˈpjʊrɪtən]
     - n. **清教徒**；禁欲者；苦行憎
 - floor
@@ -278,11 +283,11 @@
     - **base** n. 基础，底部； v. 把...基于(base on)
     - basic adj. 基本的，基础的
 - poet [ˈpoʊət]
-    - n. 诗人 
+    - n. 诗人
     - poetry [ˈpoʊətri] n. 诗歌
     - poetic [poʊˈetɪk] adj. 诗歌的
 - hunter [ˈhʌntər]
-    - n. 猎人；狩猎者 
+    - n. 猎人；狩猎者
     - **headhunter** n. 猎头
     - hurt v./n. 受伤
     - hunt [hʌnt] v. 打猎
@@ -301,7 +306,7 @@
     - rental n. 租金
 - theirs
 - gum [ɡʌm]
-    - n. **口香糖**；牙龈；树胶 
+    - n. **口香糖**；牙龈；树胶
     - chew([tʃuː]) gum 嚼口香糖
 - thereby
     - adv. 因此，从而
@@ -312,20 +317,20 @@
             - His analysis should therefore end any self-contentedness(指“对自己太满意、安于现状”的心态 -> 自满、自得).
             - Therefore, it is important to study humans.
 - ladder [ˈlædər]
-    - n. 梯子；阶梯；途径 
+    - n. 梯子；阶梯；途径
     - Japanese education is praised(称赞) for helping the young climb the social ladder.
     - stairs 楼梯
     - lift(英)/elevator(美) 直梯
         - lift -> loft
 - monthly
 - clue [kluː]
-    - n. 线索，提示 
+    - n. 线索，提示
     - These offer clues to the careers([kəˈrɪr]) that will fit them best
 - questionable
     - adj. 可疑的；有问题的；未必准确的
     - question n. 问题； v. 提问
 - foresee [fɔːrˈsiː]
-    - vt. 预见，预料，预知 
+    - vt. 预见，预料，预知
     - fore- 在...之前
     - forecast [ˈfɔːrkæst] n./v. 预测，预料
         - cast- 投掷，扔
@@ -337,6 +342,8 @@
         - My sister and I do not look alike.
     - like prep. 像
         - Much of our social life is like that.
+    - dislike vt./n. 不喜欢，厌恶
+    - unlike prep. 不像，和...不同
 - engine
     - n. 发动机；机车，火车头
 - cheat
@@ -352,7 +359,7 @@
     - shoot vi./vt. 射击
 - length
 - violence [ˈvaɪələns]
-    - n. 暴力；猛烈 
+    - n. 暴力；猛烈
     - viol- 暴力
         - violent adj. 暴力的；猛烈的
         - violate v. 违背；冒犯
@@ -378,9 +385,9 @@
     - robot n. 机器人
     - robust adj. 强壮的；耐用的，结实的 [roʊˈbʌst]
 - loan [loʊn]
-    - n. 贷款；借，贷款 
+    - n. 贷款；借，贷款
     - housing loans 住房贷款
-- garment
+- garment [ˈɡɑːrmənt]
     - n. 服装(pl.)；一件衣服
     - People are more interested in unaffordable(负担不起) garments.
 - silent
@@ -393,11 +400,12 @@
     - neighbor/neighbour n. 邻居；邻近的人；邻国
         - their older neighbors
 - village [ˈvɪlɪdʒ]
-    - n. 乡村；(the village)乡村居民 
+    - n. 乡村；(the village)乡村居民
 - illness n. 疾病
 - click
     - v. 敲击，点击
-    - By watching what people search for，click on and say online，companies can aim "behavioral" ads at those most likely to buy.
+    - By watching what people search for，click on and say online，companies can aim "behavioral" ads at those most likely
+      to buy.
 - kingdom
     - n. 王国；领域
 - their
@@ -405,9 +413,9 @@
 - joke
     - n. 笑话，玩笑
 - ceiling [ˈsiːlɪŋ]
-    - n. 天花板；最高限度，最高限额 
+    - n. 天花板；最高限度，最高限额
     - glass ceiling 狭义：女性在职场中受到的不公平的待遇 -> 广义：指所有弱势群体面临的“看不见的职业发展障碍”
-        - They open the way to equality and they break through the glass ceiling. 
+        - They open the way to equality and they break through the glass ceiling.
 - manpower
     - n. 劳动力；人力
 - tester
