--- a/english/word/simple-word/markdown/p36-p38.md
+++ b/english/word/simple-word/markdown/p36-p38.md
@@ -180,6 +180,7 @@
     - n. 农村
 - soup [suːp]
     - n. 汤，羹
+    - soap [səʊp] n. 肥皂
 - unattractive [ˌʌnəˈtræktɪv]
     - adj. 不悦目的，不漂亮的
     - attract [əˈtrækt] v. **吸引**，使...喜爱
@@ -330,7 +331,7 @@
     - bleed [bliːd] v. 流血
 - keyword
 - quarterly [ˈkwɔːrtərli]
-    - adj. 极度的；每季的
+    - adj. 季度的；每季的
 - golden
     - adj. 金制的；金色的
 - bacterial [bæk'tɪərɪrl]
